fix overflow scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
 * {
     box-sizing: border-box;
 }
+html {
+    overflow: hidden;
+}
 body {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
